--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -1,4 +1,12 @@
+@import './Vars.scss';
+@import './Media.scss';
+
 body {
   margin: 0;
-  background-color: red;
+  font-family: $theme-font;
+  background: $main-color;
+}
+
+* {
+  box-sizing: border-box;
 }
